--- a/mensive2.html
+++ b/mensive2.html
@@ -56,7 +56,7 @@
 <body>
   <section class="hero" data-aos="fade-down">
     <div class="container">
-      <img id="heroAvatar" class="avatar" src="/images/memories3.jpeg" alt="">
+      <img id="heroAvatar" class="avatar" src="images/memories3.jpeg" alt="">
       <h1 class="mt-3">Happy Mensive, Aven!</h1>
       <p class="lead mx-auto" style="max-width:720px;">Bacanya sambil denger ini deh, happy second mensive! 
         Ini dibuat dan disusun dengan sepenuh hati jadi silakan dibaca pelan-pelan ^^</p>
@@ -74,7 +74,7 @@
     <div class="container">
       <div class="intro-card mx-auto row align-items-center g-4" style="max-width:1000px;">
         <div class="col-md-5 text-center" data-aos="fade-right">
-          <img src="/images/jaehyun.jpeg" alt="me" class="intro-photo">
+          <img src="images/jaehyun.jpeg" alt="me" class="intro-photo">
         </div>
         <div class="col-md-7" data-aos="fade-left">
           <h2>This is me</h2>
@@ -96,7 +96,7 @@
             <div class="carousel-item active">
               <div class="row g-3 align-items-center">
                 <div class="col-md-3 text-center">
-                  <img src="/images/memories1.jpeg" alt="" style="width:100%; border-radius:10px;">
+                  <img src="images/memories1.jpeg" alt="" style="width:100%; border-radius:10px;">
                 </div>
                 <div class="col-md-9">
                   <p class="story-text">Dan yap, lets start with our first story alias awal kenalan. kamu inget nggak awal kenalan sama aku gimana? btw ngomongin soal ini, 
@@ -114,7 +114,7 @@
             <div class="carousel-item">
               <div class="row g-3 align-items-center">
                 <div class="col-md-3 text-center">
-                  <img src="/images/memories2.jpeg" alt="" style="width:100%; border-radius:10px;">
+                  <img src="images/memories2.jpeg" alt="" style="width:100%; border-radius:10px;">
                 </div>
                 <div class="col-md-9">
                   <p class="story-text">Slide ini isinya moment lucu hehehe tapi fotonya nggak nyambung, maaf ya.
@@ -131,7 +131,7 @@
             <div class="carousel-item">
               <div class="row g-3 align-items-center">
                 <div class="col-md-3 text-center">
-                  <img src="/images/story1.jpeg" alt="" style="width:100%; border-radius:10px;">
+                  <img src="images/story1.jpeg" alt="" style="width:100%; border-radius:10px;">
                 </div>
                 <div class="col-md-9">
                   <p class="story-text">Slide ini isinya apa? aku siapa? kamu siapa? slide ini isinya..
@@ -210,7 +210,7 @@
     <h5>Your Mein Schatz aka Julio :D</h5>
     <p class="muted">Btw ini dibuat dengan buru-buru, jadi maaf kalau banyak kurangnya. I'll make you something nicer in the next mensive, deal?</p>
   </footer>
-  <audio id="bgAudio" src="/song/The-Shade.mp3" preload="none" loop></audio>
+  <audio id="bgAudio" src="song/The-Shade.mp3" preload="none" loop></audio>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
@@ -270,3 +270,4 @@
   </script>
 </body>
 </html>
+
